Personalización del widget

--- a/app/src/main/res/xml/simple_widget_layout.xml
+++ b/app/src/main/res/xml/simple_widget_layout.xml
@@ -1,5 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-</FrameLayout>
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:background="@color/widget_background"
+    android:padding="8dp"
+    android:gravity="center">
+
+    <FrameLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_margin="4dp">
+        <ImageView
+            android:id="@+id/icon_quick_shop"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_cart"
+            android:contentDescription="@string/quick_shop" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_margin="4dp">
+        <ImageView
+            android:id="@+id/icon_shopping_list"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_list"
+            android:contentDescription="@string/shopping_list" />
+    </FrameLayout>
+</LinearLayout>
